clusters/kind_ovh/infra/monitoring/kube_prom_stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
